--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <div class="header-inner__btn-line"></div>
           </div>
         </div>
+
         <div class="header-content">
           <div>
             <p class="header-content-text">Lift or go f*rk</p>
@@ -67,6 +68,40 @@
           <p class="header-simple-second"></p>
         </div>
         <div>
+
+        <!-- <ul>
+          <li>
+            <div class="header-content">
+              <div>
+                <p class="header-content-text">Lift or go f*rk</p>
+              </div>
+              <div class="header-counter">
+                <div class="header-counter-block">
+                  <div class="header-counter-block-color"></div>
+                </div>
+                <p class="header-counter-text">01</p>
+              </div>
+            </div>
+            <div class="header-simple">
+              <p class="header-simple-text"></p>
+              <p class="header-simple-second"></p>
+            </div>
+            <div>
+          </li>
+          <li>
+
+          </li>
+          <li>
+
+          </li>
+          <li>
+
+          </li>
+        </ul> -->
+
+        
+
+
           <div class="header-scroll">
             <button class="header-scroll-btn">
               <svg class="header-scroll-btn-icon" width="16px" height="16px">
@@ -1477,5 +1512,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/reviews.js"></script>
+    <script src="./js/bg-slider.js"></script>
   </body>
 </html>
