--- a/index.html
+++ b/index.html
@@ -208,8 +208,12 @@
                     srcset="./images/bg-tablet-1.jpg"
                   />
                   <source
-                    media="(min-width: 768px) and (max-width: 1919px)"
+                    media="(min-width: 768px) and (max-width: 1439px)"
                     srcset="./images/bg-desktop-1.jpg"
+                  />
+                  <source
+                    media="(min-width: 1440px) and (max-width: 1919px)"
+                    srcset="./images/bg-desktop-1660-1.jpg"
                   />
                   <source
                     media="(min-width: 1920px)"
@@ -287,8 +291,12 @@
                     srcset="./images/bg-tablet-3.jpg"
                   />
                   <source
-                    media="(min-width: 768px) and (max-width: 1919px)"
+                    media="(min-width: 768px) and (max-width: 1439px)"
                     srcset="./images/bg-desktop-2.jpg"
+                  />
+                  <source
+                    media="(min-width: 1440px) and (max-width: 1919px)"
+                    srcset="./images/bg-desktop-1660-2.jpg"
                   />
                   <source
                     media="(min-width: 1920px)"
@@ -375,8 +383,12 @@
                     srcset="./images/bg-tablet-2.jpg"
                   />
                   <source
-                    media="(min-width: 768px) and (max-width: 1919px)"
+                    media="(min-width: 768px) and (max-width: 1439px)"
                     srcset="./images/bg-desktop-3.jpg"
+                  />
+                  <source
+                    media="(min-width: 1440px) and (max-width: 1919px)"
+                    srcset="./images/bg-desktop-1660-3.jpg"
                   />
                   <source
                     media="(min-width: 1920px)"
@@ -458,8 +470,12 @@
                     srcset="./images/bg-tablet-4.jpg"
                   />
                   <source
-                    media="(min-width: 768px) and (max-width: 1919px)"
+                    media="(min-width: 768px) and (max-width: 1439px)"
                     srcset="./images/bg-desktop-4.jpg"
+                  />
+                  <source
+                    media="(min-width: 1440px) and (max-width: 1919px)"
+                    srcset="./images/bg-desktop-1660-4.jpg"
                   />
                   <source
                     media="(min-width: 1920px)"
