--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
     <main>
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container ">
           <ul>
             <li>
               <div class="hero-content hero-active">
